<resources>
    <string name="app_name">The Truck</string>
    <string name="error_message">Sorry there was an error loading car facts. Please try again later</string>
    <string name="title">Search Trucks!</string>
    <string name="image_description">Image description</string>
    <string name="share_cat_fact">Share A Cat Fact!</string>
    <string name="cat_fact_content">Do you want to know a Cat Fact?\n\n%s</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="summary">Summary</string>
    <string name="option">Option</string>
    <string name="none_selected">None Selected</string>
    <string name="load_error">Please fill up all required fields</string>
</resources>
