<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corner"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_add"/>

        <TextView
            android:id="@+id/manufacturerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/manufacturer"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/chosenManufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/manufacturerTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/none_selected"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corner"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_add"/>

        <TextView
            android:id="@+id/modelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/model"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/chosenModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/modelTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/none_selected"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corner"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_add"/>

        <TextView
            android:id="@+id/YearTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/year"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/chosenYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/YearTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/none_selected"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corner"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/summaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/summary"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </RelativeLayout>

</LinearLayout>
