<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="48dp">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </SearchView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:id="@+id/llSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/blue"
        android:stretchColumns="0,1,2"
        android:visibility="gone">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Summary Result"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"/>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/chosenManufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/chosenModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/chosenYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>